Version 2.0.1
~~~~~~~~~~~~~
Post version 2.0.0

Version 2.0.0
~~~~~~~~~~~
Re-numbered version from 7.4 (the jump from 0.7 to 7.1 some time ago was a mistake)
Added different types of binary message (STA/ autocorrelation, cross-correlation, kurtosis)
Some fixes for array lengths
Version for DiFX-2.0.0

Version 7.3
~~~~~~~~~~~
Add difxVersion to difxStartMessage
cpumon and mk5mon: catch exceptions and prevent terminal infection
Add mark5ipc library
difxlog: Log transient messages
testdifxmessagereceive: allow selection of one message type, add in-line help
For DiFX-1.5.4

Version 7.2
~~~~~~~~~~~
Add transient XML type
Fix errormon/errormon2 in cases where "entities" are in message strings
Use pclose after popen (difxlog)
Lots of protection against excessive string lengths
For DiFX-1.5.3

Version 7.1
~~~~~~~~~~~
Do better job expanding "entities" in XML formation
 - do expansion more universally
 - encode ascii values 1-31, 128-255 in [[]] so they can be idenfied and not crash parsers
Add new Mark5 States: Test TestWrite and TestRead
Improve safety of string manipulation
 - TODO: entity expansion safety

Version 0.7 20090904
~~~~~~~~~~~
Add XML type for condition reports
  one document per disk (i.e., 8 per module)
Test programs for condition document types
DiFX version 1.5.1
unchanged for DiFX-1.5.2

Version 0.6 20090518
~~~~~~~~~~~
Improvements to difxlog
DiFX version 1.5

Version 0.5 20090131
~~~~~~~~~~~
Complete change from DifxMessageError to DifxMessageAlert
Add Mark5Version message type
Add Daughterboard information to Mark5Version messages
Implement a minimum send delay (set to 40us now) to prevent loss of messages
  when many are sent at nearly the same time.  Warning -- this could have 
  performance impacts!

Version 0.4 20090121
~~~~~~~~~~~
Escape characters in xml messages: < > & ' "
  see http://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references
Add initial version of "mk5display", a python gui to watch a bank of Mark5 units. 