@@ -2,8 +2,6 @@ AC_INIT([difxmessage], [2.0.1], [Walter Brisken <wbrisken@nrao.edu>])
 
 AM_CONFIG_HEADER([config.h])
 
-AC_CONFIG_MACRO_DIR([m4])
-
 #shared library versioning
 LIBRARY_VERSION=0:0:0
 #               | | |
@@ -22,6 +20,10 @@ PACKAGE_VERSION=AC_PACKAGE_VERSION
 
 AC_SUBST([PACKAGE_VERSION])
 AC_SUBST([LIBRARY_VERSION])
+
+version=AC_PACKAGE_VERSION
+AC_SUBST(version)
+
 
 AM_INIT_AUTOMAKE
 
@@ -51,6 +53,7 @@ LIBS=${EXPAT_LIBS}
 AC_OUTPUT([
 	Makefile \
 	difxmessage.pc \
+	difxmessage.spec \
 	mark5ipc.pc \
 	difxmessage/Makefile \
 	mark5ipc/Makefile \
